# GamesDev

./: CMakeLists.txt
2_invaders/: bullet.cpp  bullet.h  game.h  main.cpp  ship.cpp  ship.h
Title_Engine/: entity.cpp  entity.h  main.cpp  player.cpp  player.h
practical_1/: main.cpp
practical_5_physics/: main.cpp
practical_6_platformer/components/: cmp_player_physics.cpp  cmp_text.cpp  cmp_text.h
practical_6_platformer/scenes/: scene_level1.cpp  scene_level2.cpp  scene_level3.cpp  scene_menu.cpp  scene_menu.h
